Design fixes for demo

--- a/angular/app/footer/footer.less
+++ b/angular/app/footer/footer.less
@@ -6,6 +6,8 @@
     border-top: 1px solid @border;
     padding-top: 40px;
     padding-bottom: 40px;
+    color: @grey;
+    font-weight: 300;
 }
 
 .Footer-text{
@@ -17,6 +19,7 @@
 .Footer-link{
     text-decoration: none;
     color: @grey;
+    font-weight: 400;
 }
 
 .Footer-link:hover{
