Demo Design fixes

--- a/angular/app/landing/landing.less
+++ b/angular/app/landing/landing.less
@@ -29,8 +29,9 @@ body{
 
 .Landing-heading{
     color: white;
-    letter-spacing: -2px;
+    letter-spacing: -3px;
     margin-top: 20px;
+    font-size: 60px;
 }
 
 .Landing-subtitle{
