Demo is now responsive

--- a/angular/app/landing/landing.less
+++ b/angular/app/landing/landing.less
@@ -32,10 +32,12 @@ body{
     letter-spacing: -3px;
     margin-top: 20px;
     font-size: 60px;
+    text-align: center;
 }
 
 .Landing-subtitle{
     opacity: 0.7;
+    text-align: center;
 }
 
 .Landing-getStarted{
@@ -134,7 +136,7 @@ body{
 
 .Landing-features{
     text-align: center;
-    margin: 60px;
+    margin: 60px 10px;
 }
 
 .Landing-featuresMainTitle{
@@ -155,7 +157,7 @@ body{
     width: 176px;
     height: 176px;
     border-radius: 50%;
-    margin: 0 auto 20px;
+    margin: 40px auto 20px;
 }
 
 .Landing-featuresEntry-icon{
