Fixed warn toast

--- a/angular/material/toast.less
+++ b/angular/material/toast.less
@@ -1,4 +1,5 @@
-md-toast[md-theme=warn]{
-	background-color: #F44336;
-	border-radius: 2px;
+md-toast[md-theme=warn] {
+  .md-toast-content {
+    background-color: #F44336;
+  }
 }
