--- a/angular/app/pages/header/header.less
+++ b/angular/app/pages/header/header.less
@@ -22,7 +22,7 @@
 
 .DemoHeader-link{
     text-decoration: none;
-    color: @black;
+    color: @black !important;
     padding: 0 20px;
     display: inline-block;
     transition: 250ms background-color;
@@ -35,6 +35,7 @@
 
 .DemoHeader-github{
     margin-top: 17px;
+    margin-left: 10px;
 }
 
 .DemoHeader-spacer{
