--- a/angular/app/components/login-form/login-form.less
+++ b/angular/app/components/login-form/login-form.less
@@ -1,10 +1,11 @@
 .LoginForm-inputContainer{
     margin-top: 10px;
     margin-bottom: 0px;
-    margin-left: 8px;
     width: 80%;
+    min-width: 300px;
 }
 
 .LoginForm-submit{
     margin-bottom: 40px;
+    margin-left: 0;
 }
