--- a/angular/app/pages/landing/landing.less
+++ b/angular/app/pages/landing/landing.less
@@ -174,6 +174,7 @@ body{
     padding-left: 50px;
     padding-right: 50px;
     font-weight: 300;
+    color: @black;
 }
 
 .Landing-featuresEntry--restful{
