--- a/angular/app/components/register-form/register-form.component.html
+++ b/angular/app/components/register-form/register-form.component.html
@@ -1,22 +1,24 @@
-<div>
-	<md-input-container>
-		<label>Name</label>
-		<input type="text" ng-model="vm.name">
-	</md-input-container>
-</div>
+<form ng-submit="vm.register()">
+	<div>
+		<md-input-container>
+			<label>Name</label>
+			<input type="text" ng-model="vm.name">
+		</md-input-container>
+	</div>
 
-<div>
-	<md-input-container>
-		<label>Email</label>
-		<input type="email" ng-model="vm.email">
-	</md-input-container>
-</div>
+	<div>
+		<md-input-container>
+			<label>Email</label>
+			<input type="email" ng-model="vm.email">
+		</md-input-container>
+	</div>
 
-<div>
-	<md-input-container>
-		<label>Password</label>
-		<input type="password" ng-model="vm.password">
-	</md-input-container>
-</div>
+	<div>
+		<md-input-container>
+			<label>Password</label>
+			<input type="password" ng-model="vm.password">
+		</md-input-container>
+	</div>
 
-<md-button type="submit" class="md-primary md-raised">Register</md-button>
+	<md-button type="submit" class="md-primary md-raised">Register</md-button>
+</form>
