--- a/angular/app/components/forgot-password/forgot-password.component.html
+++ b/angular/app/components/forgot-password/forgot-password.component.html
@@ -6,5 +6,5 @@
         </md-input-container>
     </div>
 
-    <md-button type="submit" class="LoginForm-submit md-primary md-raised">Submit</md-button>
+    <md-button type="submit" class="md-primary md-raised">Submit</md-button>
 </form>
