PasswordController tests & functionality #129

--- a/angular/app/components/reset-password/reset-password.component.html
+++ b/angular/app/components/reset-password/reset-password.component.html
@@ -1,8 +1,8 @@
 <div class="ResetPassword-loader" layout="row" layout-align="center center">
-    <md-progress-circular md-mode="indeterminate" ng-if="!vm.isValidCode"></md-progress-circular>
+    <md-progress-circular md-mode="indeterminate" ng-if="!vm.isValidToken"></md-progress-circular>
 </div>
 
-<form ng-submit="vm.submit()" ng-show="vm.isValidCode">
+<form ng-submit="vm.submit()" ng-show="vm.isValidToken">
     <div>
         <md-input-container>
             <label>Password</label>
