reset password workflow now working #129

--- a/angular/app/components/reset-password/reset-password.component.html
+++ b/angular/app/components/reset-password/reset-password.component.html
@@ -1,5 +1,5 @@
-<div class="ResetPassword-loader" layout="row" layout-align="center center">
-    <md-progress-circular md-mode="indeterminate" ng-if="!vm.isValidToken"></md-progress-circular>
+<div class="ResetPassword-loader" ng-if="!vm.isValidToken" layout="row" layout-align="center center">
+    <md-progress-circular md-mode="indeterminate"></md-progress-circular>
 </div>
 
 <form ng-submit="vm.submit()" ng-show="vm.isValidToken">
