--- a/angular/app/components/forgot-password/forgot-password.component.html
+++ b/angular/app/components/forgot-password/forgot-password.component.html
@@ -1,10 +1,10 @@
-<form ng-submit="vm.submit()">
+<form ng-submit="vm.submit()" class="ForgotPassword-form" layout="row" layout-align="center center">
     <div>
-        <md-input-container>
+        <md-input-container class="ForgotPassword-input">
             <label>Email</label>
             <input type="email" ng-model="vm.email">
         </md-input-container>
-    </div>
 
-    <md-button type="submit" class="md-primary md-raised">Submit</md-button>
+        <md-button type="submit" class="md-primary md-raised">Submit</md-button>
+    </div>
 </form>
