--- a/angular/app/components/reset-password/reset-password.component.html
+++ b/angular/app/components/reset-password/reset-password.component.html
@@ -1,21 +1,21 @@
-<div class="ResetPassword-loader" ng-if="!vm.isValidToken" layout="row" layout-align="center center">
-    <md-progress-circular md-mode="indeterminate"></md-progress-circular>
-</div>
+<form class="ResetPassword-form" ng-submit="vm.submit()" layout="row" layout-align="center center">
 
-<form ng-submit="vm.submit()" ng-show="vm.isValidToken">
-    <div>
-        <md-input-container>
+    <div ng-if="!vm.isValidToken" layout="row" layout-align="center center">
+        <md-progress-circular md-mode="indeterminate"></md-progress-circular>
+    </div>
+
+    <div ng-show="vm.isValidToken">
+        <md-input-container class="ResetPassword-input">
             <label>Password</label>
             <input type="password" ng-model="vm.password">
         </md-input-container>
-    </div>
 
-    <div>
-        <md-input-container>
+        <md-input-container class="ResetPassword-input">
             <label>Confirm Password</label>
             <input type="password" ng-model="vm.password_confirmation">
         </md-input-container>
+
+        <md-button type="submit" class="md-primary md-raised">Submit</md-button>
     </div>
 
-    <md-button type="submit" class="md-primary md-raised">Submit</md-button>
 </form>
