Finalized design for JWT reset password. closes #129

--- a/angular/app/components/forgot-password/forgot-password.component.html
+++ b/angular/app/components/forgot-password/forgot-password.component.html
@@ -1,6 +1,6 @@
-<form ng-submit="vm.submit()" class="ForgotPassword-form" layout="row" layout-align="center center">
+<form ng-submit="vm.submit()" class="ForgotPassword-form">
     <div>
-        <md-input-container class="ForgotPassword-input">
+        <md-input-container>
             <label>Email</label>
             <input type="email" ng-model="vm.email">
         </md-input-container>
