--- a/angular/app/components/reset-password/reset-password.component.html
+++ b/angular/app/components/reset-password/reset-password.component.html
@@ -1,4 +1,4 @@
-<form class="ResetPassword-form" ng-submit="vm.submit()" layout="row" layout-align="center center">
+<form ng-submit="vm.submit()">
 
     <div ng-if="!vm.isValidToken" layout="row" layout-align="center center">
         <md-progress-circular md-mode="indeterminate"></md-progress-circular>
