--- a/angular/app/pages/landing/landing.less
+++ b/angular/app/pages/landing/landing.less
@@ -9,6 +9,7 @@ body{
 }
 
 .Landing-cover{
+    background-color: #00A4C6;
     background-image: url('/img/cover.jpg');
     background-size: cover;
     background-attachment: fixed;
