--- a/angular/app/pages/footer/footer.scss
+++ b/angular/app/pages/footer/footer.scss
@@ -1,24 +1,24 @@
-@import "./angular/material/project";
+@import "../../../material/project";
 
 .Footer{
     text-align: center;
-    background-color: @background;
-    border-top: 1px solid @border;
+    background-color: $background;
+    border-top: 1px solid $border;
     padding-top: 40px;
     padding-bottom: 40px;
-    color: @grey;
+    color: $grey;
     font-weight: 300;
 }
 
 .Footer-text{
     padding-top: 10px;
     opacity: 0.8;
-    color: @grey;
+    color: $grey;
 }
 
 .Footer-link{
     text-decoration: none;
-    color: @grey !important;
+    color: $grey !important;
     font-weight: 400;
 }
 
